@@ -7,6 +7,7 @@
     volute Class, :attr { } --> Class OR attr
 [o] volute :not, Light { ... }
 [o] volute /^att/ { ... }
+[o] not including Volute, but triggering Volute.xxx on some changes
 
 [ ] volute /regex/ => /regex/ { ... }
 
@@ -28,6 +29,4 @@
       `-- volute a, b
 
 [ ] pass the object as block binding ?
-
-[ ] not including Volute, but triggering Volute.xxx on some changes
 
