@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
-  s.date = %q{2010-10-09}
+  s.date = %q{2010-10-10}
   s.description = %q{
 placing some [business] logic outside of classes
   }
@@ -29,7 +29,9 @@ placing some [business] logic outside of classes
      "examples/state_machine.rb",
      "examples/traffic.rb",
      "lib/volute.rb",
-     "spec/guard_spec.rb",
+     "spec/apply_spec.rb",
+     "spec/filter_not_spec.rb",
+     "spec/filter_spec.rb",
      "spec/include_volute_spec.rb",
      "spec/over_spec.rb",
      "spec/spec_helper.rb",
@@ -44,7 +46,9 @@ placing some [business] logic outside of classes
   s.rubygems_version = %q{1.3.7}
   s.summary = %q{placing some [business] logic outside of classes}
   s.test_files = [
-    "spec/guard_spec.rb",
+    "spec/apply_spec.rb",
+     "spec/filter_not_spec.rb",
+     "spec/filter_spec.rb",
      "spec/include_volute_spec.rb",
      "spec/over_spec.rb",
      "spec/spec_helper.rb",
